maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:15: error: not found: value cpt
    cpt+=1
    ^ShortestPathMaze:18: error: not found: value u
        u=x+1
        ^ShortestPathMaze:19: error: not found: value v
        v=y+1
        ^ShortestPathMaze:20: error: not found: value u
        if(aMurOuest(u,y)){
                     ^ShortestPathMaze:21: error: not found: value v
          setIndication(x,v,cpt)
                          ^ShortestPathMaze:21: error: not found: value cpt
          setIndication(x,v,cpt)
                            ^ShortestPathMaze:23: error: not found: value u
          setIndication(u,y,cpt)
                        ^ShortestPathMaze:23: error: not found: value cpt
          setIndication(u,y,cpt)
                            ^ShortestPathMaze:24: error: not found: value v
          if(!aMurNord(x,v)){
                         ^ShortestPathMaze:25: error: not found: value v
            setIndication(x,v,cpt)
                            ^ShortestPathMaze:25: error: not found: value cpt
            setIndication(x,v,cpt)
                              ^