maze.shortestpath.ShortestPathMaze.scala.code
var x = 0
var y = 0
override def run() {
  for(i<-0 to getMondeLargeur-1){
    for(j<-0 to getMondeHauteur-1){
      if(aBiscuit(i,j)){
        x=i
        y=j
      }
    }
  }
  setIndication(x,y,0)
  while(true){
    cpt+=1
    if(aMurNord(x,y)){
      if(aMurOuest(x,y)){
        u=x+1
        v=y+1
        if(aMurOuest(u,y)){
          setIndication(x,v,cpt)
        }else{
          setIndication(u,y,cpt)
          if(!aMurNord(x,v)){
            setIndication(x,v,cpt)
          }
        }
      }
    }
  }
}